@@ -1,3 +1,8 @@
+2001-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Magick++/Color.h (scaleQuantumToDouble): Cast Quantum to
+ 	double prior to division.  Hopefully fix bug.
+
 2001-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Magick++/Color.h (Color(const std::string)): Pass argument by reference.
